# study-buddy

./: .gitignore  CLAUDE.md  main.py  prd_study_buddy.md  pyproject.toml
backend/: config.py
backend/graph/: builder.py  edges.py  nodes.py  state.py
backend/routers/: alerts.py  concept.py  quiz.py  utils.py  voice.py
backend/services/: arxiv.py  llm.py  telegram.py  voice.py  whatsapp.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/assets/: summer-theme.css
frontend/src/components/buddy/: BuddyAnimations.css  StudyBuddy.jsx
frontend/src/components/layout/: FloatingVoiceButton.jsx  Header.css  Header.jsx  Navbar.jsx
frontend/src/components/sections/: ArxivAlerts.jsx  Explain.jsx  Hero.jsx  Learn.jsx  Library.jsx  Quiz.jsx
frontend/src/components/setup/: BuddyNameSetup.jsx
frontend/src/components/study/: LibraryView.jsx  QuizView.jsx  VisualRenderer.jsx  VoiceWidget.jsx
frontend/src/context/: StudyContext.jsx
frontend/src/pages/: Home.jsx
tests/: conftest.py  test_learn.py  test_quiz.py  test_sanitize.py
